--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<header>
     <meta charset="UTF-8" />
     <title>Run buddy!</title>
-</head>
+    <h1>
+        <a href="/">RUN BUDDY</a>
+    </h1>
+    <nav>
+        <!-- Unordered list element -->
+        <ul>
+            <!-- List item element -->
+            <li>
+                <!-- Anchor element -->
+                <a href="#what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="what-we-do">What We Do</a>
+            </li>
+            <li>
+                <a href="#your-trainers">Your Trainers</a>
+            </li>
+            <li>
+                <a href="#reach-out">Reach Out</a>
+            </li>
+        </ul>
+    </nav>
+</header>
 
 <body>
     <!-- navigation -->
