--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <header>
     <meta charset="UTF-8" />
     <title>Run buddy!</title>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- navigation -->
     <h1>
         <a href="/">RUN BUDDY</a>
     </h1>
@@ -29,11 +31,6 @@
 </header>
 
 <body>
-    <!-- navigation -->
-    <header>
-        <h1>RUN BUDDY</h1>
-    </header>
-        
     <!-- hero/jumbotron -->
     <section>
     </section>
