--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href="#what-we-do">What We Do</a>
             </li>
             <li>
-                <a href="what-we-do">What You Do</a>
+                <a href="#what-you-do">What You Do</a>
             </li>
             <li>
                 <a href="#your-trainers">Your Trainers</a>
@@ -30,17 +30,19 @@
     </nav>
 </header>
 
-<section>
-    <div>
+<section class="hero">
+    <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
         <form>
-            <label for="name">Eneter full name:</label>
-            <input type="text" placeholder="Your name" name="name" id="name" />
+            <label for="name">Enter full name:</label>
+            <input type="text" placeholder="Your name" name="name" id="name" class="form-input"/>
+
             <label for="email">Ener email address:</label>
-            <input type="email" placeholder="Email Adress" name="email" id="email" />
+            <input type="email" placeholder="Email Adress" name="email" id="email" class="form-input"/>
+
             <label for="phone">Enter a telphone number:</label>
-            <input type="tel" placeholder="Phone Number" name="phone" id="phone" />
+            <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
             <p>
                 Have you worked with a trainer before?
                 <input type="radio" name="trainer-confirm" id="trainer-yes" />
@@ -67,13 +69,40 @@
     </section>
 
     <!-- "what we do" section -->
-    <section>
-        <h2>What We Do</h2> 
+    <section id="what-we-do">
+        <h2>What We Do</h2>
+        <p>
+            butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
+        </p>
     </section>
 
     <!-- "what we do" section -->
-    <section>
-        <h2>What You Do</h2> 
+    <section id="what-you-do">
+        <h2>What You Do</h2>
+
+        <div>
+            <img src="./assets/images/step-1.svg" alt="" />
+            <h3>Step 1: Fill Out The Form Above.</h3>
+            <p>You're already here, so why not?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-2.svg" alt="" />
+            <h3>Step 2: Consult with One of Our Trainers.</h3>
+            <p>Are you here to build muscle, lose weight, or jsut feel good?</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-3.svg" alt="" />
+            <h3>Step 3: Get Running.</h3>
+            <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+        </div>
+
+        <div>
+            <img src="./assets/images/step-4.svg" alt="" />
+            <h3>Step 4: See results.</h3>
+            <p>Bi-weekly checkins with your trainer will keep you focused.</p>
+        </div>
     </section>
 
     <!-- "meet the trainers" section -->
