--- a/index.html
+++ b/index.html
@@ -106,8 +106,14 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section>
-        <h2>Meet The Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet The Trainers
+        </h2>
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div
+        </article>
     </section>
 
     <!-- "reach out" section -->
