--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Run buddy!</title>
+    <!-- navigation -->
+</head>
+<body>
 
 <header>
-    <meta charset="UTF-8" />
-    <title>Run buddy!</title>
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <!-- navigation -->
     <h1>
         <a href="/">RUN BUDDY</a>
     </h1>
@@ -42,16 +45,15 @@
             party selvage letterpress High Life.
         </p>
     </div>
+
     <div class="hero-form">
         <h3>Get Started Today</h3>
         <p>Fill out this form and one of our trainers will schedule a consult</p>
         <form>
             <label for="name">Enter full name:</label>
             <input type="text" placeholder="Your name" name="name" id="name" class="form-input"/>
-
             <label for="email">Ener email address:</label>
             <input type="email" placeholder="Email Adress" name="email" id="email" class="form-input"/>
-
             <label for="phone">Enter a telphone number:</label>
             <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
             <p>
@@ -73,11 +75,6 @@
         </form>
     </div>
 </section>
-
-<body>
-    <!-- hero/jumbotron -->
-    <section>
-    </section>
 
     <!-- "what we do" section -->
     <section id="what-we-do" class="intro">
