--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <header>
         <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Privacy Policy - Run buddy!</title>
         <link rel="stylesheet" href="./assets/css/style.css" />
 
